# DonutEngine_v2

./: .gitignore  CMakeLists.txt  Dependencies.lua  README.md  premake5.lua
config/: DonutAVLibraryConfig-debug.cmake  DonutAVLibraryConfig-release.cmake  DonutAVLibraryConfig.cmake  DonutMainWidgetConfig-debug.cmake  DonutMainWidgetConfig-release.cmake  DonutMainWidgetConfig.cmake
src/DonutAVLibrary/: CMakeLists.txt
src/DonutAVLibrary/src/: media_types.h
src/DonutAVLibrary/src/handlers/: av_demux_handler.cpp  av_demux_handler.h  av_mux_handler.cpp  av_mux_handler.h  av_video_decode_handler.cpp  av_video_decode_handler.h  av_video_encode_handler.cpp  av_video_encode_handler.h  iav_base_handler.cpp  iav_base_handler.h
src/DonutAVLibrary/src/media/: av_bs_filter.cpp  av_bs_filter.h  av_codec_base.cpp  av_codec_base.h  av_data_list.h  av_data_tools.cpp  av_data_tools.h  av_demuxer.cpp  av_demuxer.h  av_format_base.cpp  av_format_base.h  av_muxer.cpp  av_muxer.h  av_video_codec.cpp  av_video_codec.h  av_video_decoder.cpp  av_video_decoder.h  av_video_encoder.cpp  av_video_encoder.h  av_video_scaler.cpp  av_video_scaler.h
src/DonutAVLibrary/src/media_manager/: av_media_manager.cpp  av_media_manager.h  donut_media_manager.cpp  donut_media_manager.h  vlc_media_manager.h
src/DonutAVLibrary/src/tools/: donut_buffers.h  frame_buffer.h  frame_warpper.h  packet_buffer.cpp  packet_buffer.h  packet_warpper.cpp  packet_warpper.h
src/DonutEditor/: CMakeLists.txt
src/DonutEditor/src/: donut_editor.cpp  donut_editor2.cpp  editor.cpp  editor_layer.cpp  editor_layer.h  particle_system.cpp  particle_system.h  sandbox_2d.cpp  sandbox_2d.h
src/DonutEditor/src/panels/: content_browser_panel.cpp  content_browser_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
src/DonutEditor_failed/: CMakeLists.txt
src/DonutEditor_failed/src/: editor.cpp
src/DonutEngine/: CMakeLists.txt
src/DonutEngine/assets/shaders/: flatcolor.glsl  texture.glsl
src/DonutEngine/dependencies/glad/: CMakeLists.txt  premake5.lua
src/DonutEngine/dependencies/glad/src/: glad.c
src/DonutEngine/dependencies/glfw/: .gitignore  CMakeLists.txt  premake5.lua
src/DonutEngine/dependencies/glfw/src/: CMakeLists.txt
src/DonutEngine/src/: donut.h  pch.h
src/DonutEngine/src/asset/: asset.cpp  asset.h  asset_importer.cpp  asset_importer.h  asset_manager.cpp  asset_manager.h  asset_manager_base.cpp  asset_manager_base.h  asset_metadata.h  editor_asset_manager.cpp  editor_asset_manager.h  runtime_asset_manager.cpp  runtime_asset_manager.h  texture_importer.cpp  texture_importer.h
src/DonutEngine/src/core/: application.cpp  application.h  buffer.h  core.h  engine_log.cpp  engine_log.h  entry_point.h  file_system.cpp  file_system.h  input.h  key_codes.h  layer.cpp  layer.h  layer_stack.cpp  log.cpp  log.h  logger.cpp  logger.h  platform_detection.h  timer.h  timestep.h  uuid.cpp  uuid.h
src/DonutEngine/src/events/: application_event.h  event.h  key_event.h  mouse_event.h
src/DonutEngine/src/imgui/: imgui_build.cpp  imgui_layer.cpp  imgui_layer.h
src/DonutEngine/src/math/: math.cpp  math.h
src/DonutEngine/src/physics/: physics_2d.h
src/DonutEngine/src/platform/opengl/: imgui_impl_opengl3.cpp  opengl_buffers.cpp  opengl_buffers.h  opengl_context.cpp  opengl_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h
src/DonutEngine/src/platform/windows/: qt_window.cpp  qt_window.h  windows_input.cpp  windows_input.h  windows_platform_utils.cpp  windows_window.cpp  windows_window.h
src/DonutEngine/src/project/: project.cpp  project.h  project_serializer.cpp  project_serializer.h
src/DonutEngine/src/renderer/: buffers.cpp  buffers.h  camera.h  editor_camera.cpp  editor_camera.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  graphics_context.h  msdf_data.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  subtexture.cpp  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h
src/DonutEngine/src/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.h
src/DonutEngine/src/scripting/: script_engine.cpp  script_engine.h  script_glue.cpp  script_glue.h
src/DonutEngine/src/ui/: ui.h
src/DonutEngine/src/utils/: platform_utils.h
src/DonutEngine_failed/: CMakeLists.txt
src/DonutEngine_failed/src/: donut.h
src/DonutEngine_failed/src/core/: application.cpp  application.h  core.h  entry_point.h  input.h  layer_stack.cpp  layer_stack.h  logger.h  mouse_codes.h  window.h
src/DonutEngine_failed/src/events/: application_event.h  event.h  key_event.h
src/DonutEngine_failed/src/renderer/: graphics_context.h
src/DonutMainWidget/: CMakeLists.txt
src/DonutMainWidget/src/: main.cpp  main_widget.cpp
src/DonutMainWidget/src/graphics_widget/: graphics_test.cpp  graphics_test.h  graphics_widget.cpp  graphics_widget.h
src/DonutMainWidget/src/video_player/: display_widget.cpp  display_widget.h  donut_player.cpp  donut_player.h  ivideo_player.cpp  ivideo_player.h  render_widget.cpp  render_widget.h  video_widget.cpp  video_widget.h  (+3 more)
src/DonutScriptCore/: CMakeLists.txt
src/DonutScriptCore/src/: Camera.cs  Input.cs  KeyCode.cs  Main.cs  Player.cs
src/DonutScripts/: CMakeLists.txt
src/DonutScripts/DonutScriptCore/: CMakeLists.txt
src/DonutScripts/DonutScriptCore/src/Donut/: InternalCalls.cs  Vector2.cs  Vector3.cs  Vector4.cs
src/DonutScripts/DonutScriptCore/src/Donut/Scene/: Components.cs  Entity.cs
src/DonutScripts/SandboxScript/: CMakeLists.txt
src/DonutScripts/SandboxScript/src/: Camera.cs  Player.cs
(+17 files in other folders)
